[Bugfix] Added scrolling when custom stamp modal is too small (#5501)

--- a/src/components/CreateStampModal/CreateStampModal.scss
+++ b/src/components/CreateStampModal/CreateStampModal.scss
@@ -13,7 +13,8 @@
     border-radius: 4px;
     box-shadow: 0 0 3px 0 var(--document-box-shadow);
     background: var(--component-background);
-    overflow-y: visible;
+    overflow-y: auto;
+    max-height: 100%;
 
     @include mobile {
       width: 100%;
